fix margins and alignment in EditLeadHeader

--- a/client/src/modules/lead/EditLead/EditLeadHeader/EditLeadHeader.css
+++ b/client/src/modules/lead/EditLead/EditLeadHeader/EditLeadHeader.css
@@ -67,7 +67,9 @@
 }
 
 .leadOptions {
-  display: flex
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button {
@@ -85,7 +87,7 @@
   font: 600 14px/20px Open Sans, sans-serif;
   padding: 4px 8px;
   vertical-align: top;
-  margin-left: 16px
+  margin-left: 8px
 }
 
 .button:hover {
